# DTA-GNN

./: .gitignore  Dockerfile  Dockerfile.serve  LICENSE  README.md  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docker-serve.yml  docker.yml  docs.yml  publish-pypi.yml  publish.yml
docs/: index.md
docs/development/: contributing.md
docs/getting-started/: installation.md  quickstart.md
docs/hpo/: hyperopt.md
docs/interfaces/: cli.md  python-api.md  ui.md
docs/modeling/: features.md  models.md
docs/stylesheets/: extra.css
docs/user-guide/: audits.md  cleaning.md  data-sources.md  splits.md  target-mapping.md  visualization.md
examples/: 01_baseline_models.ipynb  02_gnn_models.ipynb  Illustrative_Example_DTA_GNN_P00533_Colab.ipynb  README.md  code_snippet.py  setup_kernel.bat  setup_kernel.sh
scripts/: convert_notebook_to_pdf.py  create_logo.py  generate_pdf.py  make_colab_notebook.py  publish.sh  test_installation.sh
src/dta_gnn/: cli.py  pipeline.py  visualization.py
src/dta_gnn/app/: __init__.py  ui.py
src/dta_gnn/app_features/: __init__.py  compound.py  proteins.py
src/dta_gnn/audits/: __init__.py  leakage.py
src/dta_gnn/cleaning/: __init__.py  functions.py  validation.py
src/dta_gnn/exporters/: __init__.py  artifacts.py  card.py
src/dta_gnn/features/: __init__.py  molecule_graphs.py
src/dta_gnn/io/: chembl_source.py  downloader.py  runs.py  sqlite_source.py  target_mapping.py  utils.py  web_source.py
src/dta_gnn/models/: __init__.py  gnn.py  hyperopt.py  svr.py  (+3 more)
tests/: test_app_features.py  test_app_ui_smoke.py  test_audits.py  test_cleaning.py  test_cli.py  test_downloader.py  test_exporters.py  test_features.py  test_gnn_gin_smoke.py  test_init.py  test_io.py  test_io_web_source_coverage.py  test_models_gnn_train_coverage.py  test_models_hyperopt_coverage.py  test_models_predict_coverage.py  test_models_rf.py  test_models_svr.py  test_molecule_graphs.py  test_morgan_fingerprints.py  test_pipeline_dta.py  test_runs.py  test_splits.py  test_splits_strategies_coverage.py  test_target_mapping.py  test_visualization.py  verify_hyperopt_param_renaming.py
(+2 files in other folders)
